@@ -33,7 +33,7 @@
 		for apt in @apts
 		tipo = Apartamento.find(:last, :conditions => ["id = ?", apt.apartamento_id]).tiposApartamento_id
 		valor_diaria = TiposApartamento.find(:last, :conditions => ["id = ?",tipo]).valor
-		dias = Date.today - @conta.dataEntr.to_date
+		dias = Date.today - @conta.dataEntr.to_date+1
 		total_diaria = total_diaria + valor_diaria*dias
 		%>
 		<%end%>
